[package]
name = "zero_day_futures"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
alloy-sol-types = "0.7"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
# Stylus SDK minimal dependency; feature list removed for demo compilation.
stylus-sdk = "0.6.1"
engine = { path = "../../engine" }
