[package]
name = "matcher_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
engine = { path = "../../engine" }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["fs"] }
anyhow = "1"
ethers = { version = "2.0.14", optional = true, default-features = false, features = ["abigen","rustls"] }
hex = { version = "0.4", optional = true }

[features]
onchain = ["ethers", "hex"]
